# pare

./: .gitignore  README.md  build_distill_dataset.py  distill_off_policy.py  distill_on_policy.py  finalize_distill_dataset.py  generate_logprobs_hf.py  generate_off_policy_completions.py  generate_off_policy_logprobs.py  importance_analysis.py  process_completions.py  process_logprobs.py  prune.py  pyproject.toml
