[project]
name = "pare"
version = "0.1.0"
description = "Pruning LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "flash-attn>=2.8.3",
    "hf-transfer>=0.1.9",
    "liger-kernel>=0.6.4",
    "safetensors>=0.5.0",
    "torch>=2.9.0",
    "torchao>=0.15.0",
    "transformers>=4.57.3",
    "vllm>=0.13.0",
    "wandb>=0.23.1",
    "zstandard>=0.25.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
