[project]
name = "pare"
version = "0.1.0"
description = "Pruning and knowledge distillation for large language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "flash-attn>=2.8.3",
    "hf-transfer>=0.1.9",
    "liger-kernel>=0.6.4",
    "openbench>=0.5.3",
    "safetensors>=0.5.0",
    "torch>=2.9.0",
    "torchao>=0.15.0",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
inference = ["vllm"]

[tool.uv.sources]
vllm = { git = "https://github.com/hbfreed/vllm.git" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
